adds an Assembly Select dropdown

--- a/frontend/src/styles/Colors.css
+++ b/frontend/src/styles/Colors.css
@@ -1,8 +1,8 @@
 :root {
     --primary-color: #1976d2;
-    --secondary-color: #db0697;
+    --secondary-color: #1f2328;
     --text-primary-color: #1f2328;
-    --text-secondary-color: #db0697;
+    --text-secondary-color: #474f5a;
     --text-highlight-color: #db0697;
     --appbar-bg-color: #f6f8fa;
     --outline-color: #d1d9e0;
