--- a/frontend/src/features/project_view/data_views/assemblies/styles/Specification.css
+++ b/frontend/src/features/project_view/data_views/assemblies/styles/Specification.css
@@ -1,29 +1,18 @@
-.have-specification {
-    font-size: 0.6em;
-    font-weight: 700;
-    min-width: 100px;
-    min-height: 20px;
-    max-height: 20px;
-    text-align: center;
-    align-content: center;
-    align-self: center;
-    border-radius: 999px;
-}
-
 .have-specification-complete {
-    background-color: rgb(147, 222, 147);
+    background-color: rgb(190, 235, 190);
 }
 
 .have-specification-missing {
     color: white;
-    background-color: red;
+    background-color: var(--missing-weak);
+    border: 1px solid var(--missing-strong);
 }
 
 .have-specification-question {
     color: white;
-    background-color: orange;
+    background-color: rgb(249, 195, 96);
 }
 
 .have-specification-na {
-    background-color: rgb(203, 202, 202);
+    background-color: var(--appbar-bg-color);
 }
