lock spec-status select change unless logged in

--- a/frontend/src/features/project_view/data_views/assemblies/styles/Specification.css
+++ b/frontend/src/features/project_view/data_views/assemblies/styles/Specification.css
@@ -3,7 +3,7 @@
 }
 
 .have-specification-missing {
-    color: white;
+    color: var(--missing-strong) !important;
     background-color: var(--missing-weak);
     border: 1px solid var(--missing-strong);
 }
