--- a/frontend/src/features/project_view/data_views/assemblies/styles/Segment.css
+++ b/frontend/src/features/project_view/data_views/assemblies/styles/Segment.css
@@ -29,7 +29,7 @@
     stroke-width: 1px;
 }
 
-.add-segment-button {
+.create-new-segment-button {
     font-size: 14px;
     font-weight: 800;
     position: absolute;
