--- a/frontend/src/features/project_view/data_views/assemblies/styles/Assembly.css
+++ b/frontend/src/features/project_view/data_views/assemblies/styles/Assembly.css
@@ -2,7 +2,7 @@
     color: var(--text-highlight-color);
     font-weight: 700;
     border-right: 1px solid var(--text-highlight-color);
-    background-color: var(--highlight-light-color)
+    background-color: var(--highlight-light-color);
 }
 
 .assembly-orientation-text {
